# ErisPulse-DiscordAdapter

./: README.md  platform-features.md  pyproject.toml
DiscordAdapter/: Converter.py  Core.py  __init__.py
